--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Pneumonia Detection Web App" />
+  <meta name="description" content="BreastCancer Detection Web App" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Pneumonia Detection</title>
+  <title>Breast Cancer Detection</title>
  
 </head>
 <body>  
